# Physics-Simulation

./: CMakeLists.txt  Integrator.cpp  Integrator.h  Qhull.cpp  Qhull.h  camera.h  debugger.cpp  debugger.h  main.cpp  mesh.h  model.vs  object.cpp  object.h  object_collision.h  physys.cpp  physys.h  plane.cpp  plane.h  shader.h  sphere.h  test.cpp  tetgen  tetra_intersect.h  tetra_intersect_volume.h
glm-aabb/: AABB.cpp  AABB.hpp  AABB_tree.cpp  AABB_tree.h
model/: cube.1.edge  cube.1.ele  cube.1.face  cube.1.node  cube.1.smesh  cube.node  cube_generation.ipynb  mymesh.1.edge  mymesh.1.ele  mymesh.1.face  mymesh.1.node  mymesh.smesh
model/.ipynb_checkpoints/: cube_generation-checkpoint.ipynb
model/Rabbit/: RabbitScan_v2.1.edge  RabbitScan_v2.1.ele  RabbitScan_v2.1.face  RabbitScan_v2.1.node  RabbitScan_v2.1.smesh
model/car/: Ardita.stl  bumper_car_v2.1.edge  bumper_car_v2.1.smesh  rccar.1.face  rccar.1.node  rccar.stl
model/cube/: cube.1.ele  cube.1.face  cube.1.node
model/cube2/: cube.1.ele  cube.1.face  cube.1.node  cube.node
model/cube_origin/: cube.1.node  cube.edge  cube.ele  cube.face  cube.node
model/rectangle/: rectangle.1.ele  rectangle.1.face  rectangle.1.node  rectangle.node
model/toy/: duck.1.edge  duck.1.ele  duck.1.face  duck.1.node  duck.1.smesh  duck.stl  top.1.edge  top.1.ele  top.1.face  top.1.node  top.1.smesh  top.stl  toy.1.face  toy.1.node  toy.stl
shader/: debug.fs  debug.gs  debug.vs  ground.fs  ground.vs  particle.fs  particle.gs  particle.vs
